force-app/main/default/main/default/objects/Hospital_Payment_Section__c/Hospital_Payment_Section__c.object-meta.xml
<CustomObject>
    <label>Hospital Payment</label>
    <nameField>
        <label>Hospital Payment Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hospital Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>