force-app/main/default/main/default/objects/Hospital_Payment_Section__c/fields/Amount_of_3rd_Test__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_3rd_Test__c</fullName>
    <label>Amount of 3rd Test</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>