force-app/main/default/main/default/objects/Hospital_Payment_Section__c/fields/Amounts_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amounts_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amounts Paid</label>
    <type>Checkbox</type>
</CustomField>