force-app/main/default/main/default/objects/Hospital_Payment_Section__c/fields/Patient_Report_Card__c.field-meta.xml
<CustomField>
    <fullName>Patient_Report_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Report Card</label>
    <referenceTo>Patient_Report_Card__c</referenceTo>
    <relationshipName>Hospital_Payments_Section</relationshipName>
    <type>Lookup</type>
</CustomField>