force-app/main/default/main/default/objects/Hospital_Payment_Section__c/fields/Report_Card_of_Patient__c.field-meta.xml
<CustomField>
    <fullName>Report_Card_of_Patient__c</fullName>
    <label>Report Card of Patient</label>
    <length>100</length>
    <type>Text</type>
</CustomField>