force-app/main/default/main/default/objects/Hospital_Payment_Section__c/fields/Test_number_3__c.field-meta.xml
<CustomField>
    <fullName>Test_number_3__c</fullName>
    <label>Test number 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allergy Skin Testing</fullName>
            </value>
            <value>
                <fullName>Blood Testing</fullName>
            </value>
            <value>
                <fullName>Spirometry</fullName>
            </value>
            <value>
                <fullName>ECG</fullName>
            </value>
            <value>
                <fullName>Chest X-Ray</fullName>
            </value>
            <value>
                <fullName>MRI</fullName>
            </value>
            <value>
                <fullName>Computerized Tomography</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>