force-app/main/default/main/default/objects/Hospital_Payment_Section__c/fields/Test_Recommended_by_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Test_Recommended_by_Doctor__c</fullName>
    <label>Test Recommended by Doctor</label>
    <length>240</length>
    <type>Text</type>
</CustomField>