force-app/main/default/main/default/objects/Hospital_Payment_Section__c/fields/Total_Amount_For_All_Tests__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_For_All_Tests__c</fullName>
    <formula>Amount_of_1st_Test__c +  Amount_of_2nd_Test__c +  Amount_of_3rd_Test__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount For All Tests</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>