force-app/main/default/main/default/objects/Hospital_Payment_Section__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Test_Recommended_by_Doctor__c</columns>
    <columns>Total_Amount_For_All_Tests__c</columns>
    <columns>Amounts_Paid__c</columns>
    <columns>Patient_Registration_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>