force-app/main/default/main/default/objects/Hospital_Payment_Section__c/listViews/Today_s_Test_List.listView-meta.xml
<ListView>
    <fullName>Today_s_Test_List</fullName>
    <columns>NAME</columns>
    <columns>Test_Recommended_by_Doctor__c</columns>
    <columns>Total_Amount_For_All_Tests__c</columns>
    <columns>Amounts_Paid__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Test List</label>
</ListView>